# blog

./: .gitignore  404.html  404.md  CNAME  README.md  a-thing-about-provenance.md  config.toml  deploy.sh  index.html  index.md  index.xml  shell.nix  sitemap.xml
.github/workflows/: pages.yml
categories/: index.html  index.xml
content/posts/: box-is-a-unique-type.md  item-patterns-and-struct-else.md  the-inevitable-doom.md
content/posts/fake-openssh-keys/: fake_openssh_key.js  fake_openssh_key_bg.wasm  index.md
content/posts/ssh-security/: index.md
cool-blog/: index.md  types-rust-ts-java.md
helpers/ciphertext-tampering/: Cargo.toml
helpers/ciphertext-tampering/src/: main.rs
helpers/fake-openssh-key/: Cargo.toml  README.md
helpers/fake-openssh-key/src/: lib.rs
hi/: index.html  index.md
page/1/: index.html
posts/: index.html  index.xml
posts/box-is-a-unique-type/: index.html
posts/item-patterns-and-struct-else/: index.html
posts/page/1/: index.html
posts/the-inevitable-doom/: index.html
public/: 404.html  index.html  index.xml  sitemap.xml
public/categories/: index.html
public/posts/: index.html  index.xml
public/posts/box-is-a-unique-type/: index.html
public/tags/: index.html
tags/: index.html  index.xml
tags/language-design/: index.html  index.xml
tags/language-design/page/1/: index.html
tags/rust/: index.html  index.xml
tags/rust/page/1/: index.html
tags/story/: index.html  index.xml
tags/story/page/1/: index.html
tags/unsafe-code/: index.html  index.xml
tags/unsafe-code/page/1/: index.html
(+1 files in other folders)
