[package]
name = "fake-openssh-key"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "s"

[dependencies]
cluelessh-keys = { git = "https://github.com/Noratrieb/cluelessh.git", version = "0.1.0" }
getrandom = { version = "0.2.15", features = ["js"] }
wasm-bindgen = "0.2.93"
